# ProjetoPS

./: .gitignore  Dockerfile  Makefile  a.asm  b.asm  c.asm  d.asm  guideline.md  loader.md  object_file_standard.md  readme.md  run_ui.sh  test_loader  todo.md  todo.txt  uicomponents.md  vm.md
src/: constants.h  main.cpp  main_cli.cpp
src/assembler/: assembler.cpp  assembler.h
src/cpu/: cpu.cpp  cpu.h
src/instruction_set/: decoder.cpp  decoder.h  instruction.h
src/linker/: extref_resolver.cpp  extref_resolver.h  global_symbol_table.cpp  global_symbol_table.h  linker.cpp  linker.h
src/loader/: binary_loader.cpp  binary_loader.h  object_loader.cpp  object_loader.h
src/macro_processor/: macro_processor.cpp  macro_processor.h
src/memory/: memory.cpp  memory.h
src/shared/: shared.cpp  shared.h
src/vm/: vm.cpp  vm.h
tests/: assembler_modular_test.cpp  linker_extref_test.cpp  linker_gts_test.cpp  linker_test.cpp  loader_test.cpp  object_loader_test.cpp  test-code.txt
tests/asm_codes/: a.asm  b.asm  c.asm  d.asm
ui/: CMakeLists.txt  Console.cpp  Console.h  Project.cpp  Project.h  btnbuild_popup.cpp  btnbuild_popup.h  btnbuild_popup.ui  btnrun_popup.cpp  btnrun_popup.h  btnrun_popup.ui  console.cpp  console.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  runbutton.ui  vmstate.h
workspace/: 1_macro_test.asm  2_assembler_full_features.asm  2_assembler_full_features.asm-expanded.asm  3_linker_main.asm  3_linker_main.asm-expanded.asm  3_linker_mathlib.asm  3_linker_mathlib.asm-expanded.asm  4_build_lib.asm  4_build_lib.asm-expanded.asm  4_build_main.asm  4_build_main.asm-expanded.asm  main.asm  test-code.txt  test.asm  test.asm-expanded.asm  teste.txt
workspace/src/: 1_macro_test.asm-expanded.asm
